GotQuestion scrollbar fix

--- a/components/GotQuestion.scss
+++ b/components/GotQuestion.scss
@@ -7,6 +7,7 @@
   position: relative;
   margin-top: 80px;
   user-select: none;
+  overflow: hidden;
 
   &:after {
     content: "";
